--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>css Exercise</h1>
     <ul>
-        <li><a href="css-typography"></a>CSS typography</a></li>
+        <li><a href="css-typography">CSS typography</a></li>
     </ul>
     
 </body>
